syntax = "proto3";

package management.v1;

import "google/api/annotations.proto";
import "inventory/v1/agents.proto";
import "inventory/v1/log_level.proto";
import "inventory/v1/services.proto";
import "management/v1/metrics.proto";
import "management/v1/service.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

// Add PostgreSQL

message AddPostgreSQLRequest {
  // Node identifier on which a service is been running.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  string node_id = 1;
  // Node name on which a service is been running.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  string node_name = 2;
  // Create a new Node with those parameters.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  AddNodeParams add_node = 3;
  // Unique across all Services user-defined name. Required.
  string service_name = 4 [(validate.rules).string.min_len = 1];
  // Node and Service access address (DNS name or IP).
  // Address (and port) or socket is required.
  string address = 5;
  // Service Access port.
  // Port is required when the address present.
  uint32 port = 6;
  // Database name.
  string database = 7;
  // Service Access socket.
  // Address (and port) or socket is required.
  string socket = 8;
  // The "pmm-agent" identifier which should run agents. Required.
  string pmm_agent_id = 9 [(validate.rules).string.min_len = 1];
  // Environment name.
  string environment = 10;
  // Cluster name.
  string cluster = 11;
  // Replication set name.
  string replication_set = 12;
  // PostgreSQL username for scraping metrics.
  string username = 13 [(validate.rules).string.min_len = 1];
  // PostgreSQL password for scraping metrics.
  string password = 14;
  // If true, adds qan-postgresql-pgstatements-agent for provided service.
  bool qan_postgresql_pgstatements_agent = 15;
  // If true, adds qan-postgresql-pgstatmonitor-agent for provided service.
  bool qan_postgresql_pgstatmonitor_agent = 16;
  // Limit query length in QAN (default: server-defined; -1: no limit).
  int32 max_query_length = 17;
  // Disable query examples.
  bool disable_query_examples = 18;
  // Custom user-assigned labels for Service.
  map<string, string> custom_labels = 19;
  // Skip connection check.
  bool skip_connection_check = 20;
  // Disable parsing comments from queries and showing them in QAN.
  bool disable_comments_parsing = 21;
  // Use TLS for database connections.
  bool tls = 22;
  // Skip TLS certificate and hostname validation. Uses sslmode=required instead of verify-full.
  bool tls_skip_verify = 23;
  // Defines metrics flow model for this exporter.
  // Metrics could be pushed to the server with vmagent,
  // pulled by the server, or the server could choose behavior automatically.
  MetricsMode metrics_mode = 24;
  // List of collector names to disable in this exporter.
  repeated string disable_collectors = 25;
  // TLS CA certificate.
  string tls_ca = 26;
  // TLS Certifcate.
  string tls_cert = 27;
  // TLS Certificate Key.
  string tls_key = 28;
  // Custom password for exporter endpoint /metrics.
  string agent_password = 29;
  // Exporter log level
  inventory.v1.LogLevel log_level = 30;
  // Limit for auto discovery.
  int32 auto_discovery_limit = 31;
  // Optionally expose the exporter process on all public interfaces
  bool expose_exporter = 32;
}

message AddPostgreSQLResponse {
  inventory.v1.PostgreSQLService service = 1;
  inventory.v1.PostgresExporter postgres_exporter = 2;
  inventory.v1.QANPostgreSQLPgStatementsAgent qan_postgresql_pgstatements_agent = 3;
  inventory.v1.QANPostgreSQLPgStatMonitorAgent qan_postgresql_pgstatmonitor_agent = 4;
}

// PostgreSQL service provides public Management API methods for PostgreSQL Service.
service PostgreSQLService {
  // AddPostgreSQL adds PostgreSQL Service and starts postgres exporter.
  // It automatically adds a service to inventory, which is running on provided "node_id",
  // then adds "postgres_exporter" with provided "pmm_agent_id" and other parameters.
  rpc AddPostgreSQL(AddPostgreSQLRequest) returns (AddPostgreSQLResponse) {
    option (google.api.http) = {
      post: "/v1/management/PostgreSQL/Add"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add PostgreSQL"
      description: "Adds PostgreSQL Service and starts postgres exporter. It automatically adds a service to inventory, which is running on provided \"node_id\", then adds \"postgres_exporter\" with provided \"pmm_agent_id\" and other parameters."
    };
  }
}
